# tg-snatch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/aur/: PKGBUILD
packaging/homebrew/: tg-snatch.rb
packaging/scoop/: tg-snatch.json
packaging/scripts/: install.ps1  install.sh
src/: cli.rs  lib.rs  main.rs  security.rs
src/files/: catalog.rs  downloader.rs  filter.rs  mod.rs
src/storage/: db.rs
src/telegram/: client.rs  mod.rs  poller.rs  types.rs
src/ui/: display.rs  mod.rs  progress.rs  selector.rs  setup.rs
tests/: test_catalog.rs  test_cli.rs  test_database.rs  test_file_type.rs  test_filter.rs  test_types.rs
