[package]
name = "tg-snatch"
version = "0.3.0"
edition = "2021"
description = "Snatch files from Telegram — a beautiful, secure CLI downloader"
license = "MIT"
repository = "https://github.com/himanshu64/tg-snatch"
homepage = "https://github.com/himanshu64/tg-snatch"
documentation = "https://github.com/himanshu64/tg-snatch#readme"
keywords = ["telegram", "downloader", "cli", "bot-api"]
categories = ["command-line-utilities"]

[[bin]]
name = "tg-snatch"
path = "src/main.rs"

[lib]
name = "tg_snatch"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
dirs = "5"
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
